# SquatchCut

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AI_AGENT_HANDBOOK.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Makefile  PROJECT_REVIEW.md  README.md  SIMPLIFICATION_PLAN.md  SPEC.md  SQUATCHCUT_SYNC_REPORT_V4.txt  ai_agent_pain_points_analysis.md  backlog.md  constraint_framework.py  constraint_validation_tools.py  constraints_and_guidelines_inventory.md  coverage.xml  gemini_bridge.py  index.html  metadata.txt  mkdocs.yml  package.json  params.py  pyproject.toml  pytest.ini  reproduce_issue.py  requirements-dev.txt  ruff.toml  ruff_ci_errors.txt  run-core-tests.sh  run_freecad_tests.py  sitemap.xml  test_constraint_framework.py  test_export_architecture_preservation.py  test_python_compatibility_validation.py  (+3 more)
archive_v1/: .coverage  COMMIT_MESSAGE.txt  LICENSE  QUICK_START_NEXT_SESSION.md  SIMPLIFICATION_SUMMARY.md  backlog.md  check-lint.sh  constraint_framework.py  constraint_validation_tools.py  package.xml  pyproject.toml  requirements-dev.txt  ruff.toml  run-freecad-tests.sh  run_freecad_tests.py  setup.cfg  test_constraint_framework.py  test_export_architecture_preservation.py  test_testing_coverage_enforcement.py
archive_v1/.devcontainer/: Dockerfile  devcontainer.json
archive_v1/docs/: CI_HEALTH.md  ai_workflows.md  architecture.md  quality_and_performance.md  reporting_bugs.md  roadmap.md  user_guide.md
archive_v1/site/: 404.html
archive_v1/tests/: __init__.py  test_accessibility.py  test_cutlist.py  (+43 more)
(+406 files in other folders)
