[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SquatchCut"
version = "0.0.1"
description = "SquatchCut FreeCAD nesting plugin"
readme = "README.md"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.11"
files = ["freecad/SquatchCut"]
ignore_missing_imports = true
follow_imports = "silent"
